# fluid

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
docs/: DISCRETIZATION.md  GRID_AND_FLUX.md  REFERENCES.md  RESULTS.md  SURVEY.md  TAYLOR_EXPANSION.md  TVD_SCHEMES.md  USAGE.md  references.bib
examples/: cavity_flow.cpp  cavity_flow_piso.cpp  cavity_flow_simple.cpp  channel_flow.cpp  channel_flow_convergence.cpp  channel_flow_piso.cpp  channel_flow_simple.cpp  tvd_benchmark.cpp
include/: BoundaryCondition.hpp  CSVWriter.hpp  Constants.hpp  FluxLimiter.hpp  Grid.hpp  PisoSolver.hpp  PressureSolver.hpp  SimpleSolver.hpp  Solver.hpp  SolverBase.hpp
reference/journal-publication/: botella_1998_cf.bib  brown_2001_jcp.bib  chen_1998_arfm.bib  chorin_1968_math-comp.bib  ferziger_2002_book.bib  ghia_1982_jcp.bib  gresho_1987_ijnamf.bib  guermond_2006_cmame.bib  harlow_1965_phys-fluids.bib  he_1997_pre.bib  henshaw_1994_jcp.bib  issa_1986_jcp.bib  jiang_1996_jcp.bib  jimenez_1991_jfm.bib  kim_1985_jcp.bib  lele_1992_jcp.bib  moin_1998_arfm.bib  moser_1999_pof.bib  orszag_1972_jfm.bib  patankar_1972_ijhmt.bib  patankar_1980_book.bib  perot_1993_jcp.bib  peskin_2002_acta.bib  qian_1992_epl.bib  rhie_1983_aiaa.bib  (+5 more)
scripts/: colors.py  convergence.py  convergence_all_schemes.py  convergence_channel.py  tvd_validation.py  validation.py  validation_channel.py  validation_comparison.py  visualize.py
src/: BoundaryCondition.cpp  CSVWriter.cpp  Grid.cpp  PisoSolver.cpp  PressureSolver.cpp  SimpleSolver.cpp  Solver.cpp  SolverBase.cpp
